--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     </head>
     <body>
         <article class="notepad">
-            <p>Testing</p>
+            <p>Articles</p>
+            <p>
+                <i>
+                    The following articles are brain dumps and are at best works
+                    in progress, please treat them as such.
+                </i>
+            </p>
+            <p>
+                <ol>
+                    <li><a href="https://gistlog.co/SimonRichardson/e73658e4ce18a1c782dde3a49eff8c93" title="Inversion of Use">Inversion of Use</a> (November 2019)</li>
+                    <li><a href="https://gistlog.co/SimonRichardson/aeec3cc956c119223cecb07e9dbeec86" title="Dependencies">Dependencies</a> (November 2019)</li>
+                    <li><a href="https://gistlog.co/SimonRichardson/ac3ade8fa889186ffeeae3d51b57e706" title="Consistency">Consistency</a> (December 2019)</li>
+                </ol>
+            </p>
         </article>
         <footer>Simon Richardson - 2019</footer>
     </body>
