--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 </ol>
             </p>
         </article>
-        <footer>Simon Richardson - 2019</footer>
+        <footer>
+            Simon Richardson - 2019
+            <a href="articles.rss" title="Articles RSS"><img width="12px" height="12px" src="rss.svg" /></a>
+        </footer>
     </body>
 </html>
