Adding draft tooling
I'll continue to work on the draft tooling article, but for now I'm
going to release it as I may never get back around to it.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="https://gistlog.co/SimonRichardson/e73658e4ce18a1c782dde3a49eff8c93" title="Inversion of Use">Inversion of Use</a> (November 2019)</li>
                     <li><a href="https://gistlog.co/SimonRichardson/aeec3cc956c119223cecb07e9dbeec86" title="Dependencies">Dependencies</a> (November 2019)</li>
                     <li><a href="https://gistlog.co/SimonRichardson/ac3ade8fa889186ffeeae3d51b57e706" title="Consistency">Consistency</a> (December 2019)</li>
+                    <li><a href="https://gistlog.co/SimonRichardson/03aae9d4c6d3c996ada8ecafb3fce1d7" title="Tooling">Tooling (draft)</a> (December 2019)</li>
                 </ol>
             </p>
         </article>
