--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </p>
             <p>
                 <ol>
+                    <li><a href="https://gistlog.co/SimonRichardson/bf87c02b00984d2adf63fd7678cdfff7" title="A story about gossip members & a consistent hash-ring">A story about gossip members & a consistent hash-ring</a> (June 2018)</a></li>
                     <li><a href="https://gistlog.co/SimonRichardson/e73658e4ce18a1c782dde3a49eff8c93" title="Inversion of Use">Inversion of Use</a> (November 2019)</li>
                     <li><a href="https://gistlog.co/SimonRichardson/aeec3cc956c119223cecb07e9dbeec86" title="Dependencies">Dependencies</a> (November 2019)</li>
                     <li><a href="https://gistlog.co/SimonRichardson/ac3ade8fa889186ffeeae3d51b57e706" title="Consistency">Consistency</a> (December 2019)</li>
