--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <article class="notepad">
-            <p>Articles</p>
-            <p>
-                <i>
-                    The following articles are brain dumps and are at best works
-                    in progress, please treat them as such.
-                </i>
-            </p>
-            <p>
-                <ol>
-                    <li><a href="https://gistlog.co/SimonRichardson/1a0f1163c96496746720f62a30a528a5" title="All aboard">All aboard</a> (June 2018)</a></li>
-                    <li><a href="https://gistlog.co/SimonRichardson/bf87c02b00984d2adf63fd7678cdfff7" title="A story about gossip members & a consistent hash-ring">A story about gossip members & a consistent hash-ring</a> (June 2018)</a></li>
-                    <li><a href="https://gistlog.co/SimonRichardson/e73658e4ce18a1c782dde3a49eff8c93" title="Inversion of Use">Inversion of Use</a> (November 2019)</li>
-                    <li><a href="https://gistlog.co/SimonRichardson/aeec3cc956c119223cecb07e9dbeec86" title="Dependencies">Dependencies</a> (November 2019)</li>
-                    <li><a href="https://gistlog.co/SimonRichardson/ac3ade8fa889186ffeeae3d51b57e706" title="Consistency">Consistency</a> (December 2019)</li>
-                    <li><a href="https://gistlog.co/SimonRichardson/03aae9d4c6d3c996ada8ecafb3fce1d7" title="Tooling">Tooling (draft)</a> (December 2019)</li>
-                </ol>
-            </p>
+        <header>
+            <h1>
+                <a href="/">Simon Richardson<span class="cursor">▉</span></a>
+                <a href="/articles.rss" title="Articles RSS">feed</a>
+            </h1>
+        </header>
+        <article>
+            <h2>Articles</h2>
+            <ul>
+                <li><a href="https://gistlog.co/SimonRichardson/1a0f1163c96496746720f62a30a528a5" title="All aboard">All aboard</a> <span class="date">(June 2018)</span></li>
+                <li><a href="https://gistlog.co/SimonRichardson/bf87c02b00984d2adf63fd7678cdfff7" title="A story about gossip members & a consistent hash-ring">A story about gossip members & a consistent hash-ring</a> <span class="date">(June 2018)</span></li>
+                <li><a href="https://gistlog.co/SimonRichardson/e73658e4ce18a1c782dde3a49eff8c93" title="Inversion of Use">Inversion of Use</a> <span class="date">(November 2019)</span></li>
+                <li><a href="https://gistlog.co/SimonRichardson/aeec3cc956c119223cecb07e9dbeec86" title="Dependencies">Dependencies</a> <span class="date">(November 2019)</span></li>
+                <li><a href="https://gistlog.co/SimonRichardson/ac3ade8fa889186ffeeae3d51b57e706" title="Consistency">Consistency</a> <span class="date"><span class="date">(December 2019)</span></li>
+                <li><a href="https://gistlog.co/SimonRichardson/03aae9d4c6d3c996ada8ecafb3fce1d7" title="Tooling">Tooling (draft)</a> <span class="date">(December 2019)</span></li>
+            </ul>
         </article>
+        
         <footer>
-            Simon Richardson - 2019
+            <hr />
+            Simon Richardson - 2021
             <a href="articles.rss" title="Articles RSS"><img width="12px" height="12px" src="rss.svg" /></a>
         </footer>
     </body>
