Improved project definitions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
         <article>
             <h2>Projects</h2>
             <dl>
+                <dt><a href="https://juju.is/" title="Juju Project">juju</a></dt>
+                <dd>
+                    <p>
+                        Juju is an open source application modeling tool. Juju 
+                        focuses on reducing the operation overhead of today's 
+                        software by facilitating quickly deploying, configuring, 
+                        scaling, integrating, and performing operational tasks 
+                        on a wide choice of public and private cloud services 
+                        along with bare metal servers and local container based 
+                        deployments.
+                    </p>
+                    <ul>
+                        <li>Repository: <a href="https://github.com/juju/juju" title="Juju Project">juju</a></li>
+                        <li>Tenure: April 2018 - Present</li>
+                        <li>Position: Software Engineer</li>
+                        <li>Language: Go</li>
+                    </ul>
+                </dd>
                 <dt><a href="https://convoyci.com/" title="Convoy CI Project">convoy</a></dt>
                 <dd>
                     <p>
@@ -28,6 +46,12 @@
                         not sacrificing performance and security in enterprise 
                         settings.
                     </p>
+                    <ul>
+                        <li>Repository: <a href="https://convoyci.com/" title="Convoy CI Project">convoy</a></li>
+                        <li>Tenor: January 2020 - Present</li>
+                        <li>Co-Founder & Software Engineer</li>
+                        <li>Language: Go</li>
+                    </ul>
                 </dd>
                 <dt><a href="https://github.com/spoke-d" title="spoke-d Project">spoke-d</a></dt>
                 <dd>
@@ -36,6 +60,12 @@
                         within distributed systems, including task management, 
                         publish and subscribe (pubsub) and clustered databases.
                     </p>
+                    <ul>
+                        <li>Repository: <a href="https://github.com/spoke-d" title="spoke-d Project">spoke-d</a></li>
+                        <li>Tenure: Present</li>
+                        <li>Position: Software Engineer</li>
+                        <li>Language: Go</li>
+                    </ul>
                 </dd>
                 <dt><a href="https://github.com/fantasyland" title="Fantasy Land Project">fantasy land</a></dt>
                 <dd>
@@ -46,6 +76,11 @@
                         bringing a focus of functional programming to Javascript 
                         developers.
                     </p>
+                    <ul>
+                        <li>Repository: <a href="https://github.com/fantasyland" title="Fantasy Land Project">fantasy land</a></li>
+                        <li>Position: Software Engineer</li>
+                        <li>Language: Javascript</li>
+                    </ul>
                 </dd>
                 <dt><a href="https://github.com/SimonRichardson/snowy" title="Snowy">snowy</a></dt>
                 <dd>
@@ -62,6 +97,11 @@
                         append only fashion, where a full revision and audit 
                         trail can be viewed for each ledger.
                     </p>
+                    <ul>
+                        <li>Repository: <a href="https://github.com/SimonRichardson/snowy" title="Snowy">snowy</a></li>
+                        <li>Position: Software Engineer</li>
+                        <li>Language: Go</li>
+                    </ul>
                 </dd>
                 <dt><a href="https://github.com/SimonRichardson/coherence" title="coherence">coherence</a></dt>
                 <dd>
@@ -72,6 +112,11 @@
                         that it can provide a windowed data set, that from the 
                         outset guarantees to fit into smaller confined spaces.
                     </p>
+                    <ul>
+                        <li>Repository: <a href="https://github.com/SimonRichardson/coherence" title="coherence">coherence</a></li>
+                        <li>Position: Software Engineer</li>
+                        <li>Language: Go</li>
+                    </ul>
                 </dd>
             </dl>
         </article>
