Add new article

--- a/index.html
+++ b/index.html
@@ -127,6 +127,32 @@
                 have some relevance to you...?
             </p>
             <dl>
+                <dt><a href="https://gistlog.co/SimonRichardson/1a9791f798a6f30a1f77a18c560e1124" title="Trim the fat">Trim the fat</a> <span class="date">(February 2021)</span></dt>
+                <dd>
+                    <p>
+                        I'm often thinking about the article <a href="https://sandimetz.com/blog/2016/1/20/the-wrong-abstraction" title="The wrong abstraction">The wrong abstraction</a>
+                        by Sandi Metz. I believe that this analogy can also be used for application 
+                        features. What was the right abstraction at solving your applications domain 
+                        problem, might in-fact years down the line be the wrong abstraction. Either 
+                        allowing the code within the application to be present but forgotten or 
+                        attempting to constantly bring the code up to speed are both something that 
+                        I've witnessed.
+                    </p>
+                    <p>
+                        I believe both are wrong, dead and forgotten code should be removed with 
+                        haste. It becomes an unnecessary burden for engineers of the application to 
+                        factor in the code when any modifications to the codebase is performed. 
+                        Removing it might be a struggle at first, but in the end will free the 
+                        application and engineers to move on to the current focus.
+                    </p>
+                    <p>
+                        The sunk cost fallacy for constantly bringing a feature within the 
+                        application; one that is hardly or never used, not only is a burden for 
+                        engineers, but at great cost to the business. The abstraction of the domain 
+                        it was trying to solve is dead or dying and would do your business justice 
+                        to trim the fat...
+                    </p>
+                </dd>
                 <dt><a href="https://gistlog.co/SimonRichardson/03aae9d4c6d3c996ada8ecafb3fce1d7" title="Tooling">Tooling (draft)</a> <span class="date">(December 2019)</span></dt>
                 <dd>
                     <p>
