--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <p>
                         I believe both are wrong, dead and forgotten code should be removed with 
                         haste. It becomes an unnecessary burden for engineers of the application to 
-                        factor in the code when any modifications to the codebase is performed. 
+                        factor in the code when any modificatidons to the codebase is performed. 
                         Removing it might be a struggle at first, but in the end will free the 
                         application and engineers to move on to the current focus.
                     </p>
@@ -595,9 +595,10 @@
                 <li><a href="https://twitter.com/SimonRichardson" title="Twitter">twitter/simonrichardson</a></li>
             </ul>
         </article>
-
-        <footer>
+        <section>
             <hr />
+        </section>
+        <footer>
             Simon Richardson - 2021 - 
             <a href="https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fsimonrichardson.github.io%2F" title="light house score">100%</a>
             <a href="articles.rss" title="Articles RSS"><img width="12px" height="12px" src="rss.svg" alt="Article RSS" /></a>
