--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             </p>
             <ul>
                 <li><a href="https://github.com/SimonRichardson" title="Github">github/simonrichardson</a></li>
-                <li><a href="https://twitter.com/SimonRichardson" title="Twitter">twitter/simonrichardson</a></li>
+                <li><a href="https://hachyderm.io/@simonrichardson" title="Mastodon">@simonrichardson@hachyderm.io</a></li>
             </ul>
         </section>
         <section>
