update lighthouse score link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </section>
         <footer>
             Simon Richardson - 2024 - 
-            <a href="https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fsimonrichardson.github.io%2F" title="light house score">100%</a>
+            <a href="https://lighthouse-metrics.com/lighthouse/checks/c825a763-b928-428e-b394-3be9d77dc29c" title="light house score">100%</a>
         </footer>
         <script>
             function nullable(val) {
